# NationalTeam

./: Equipment.cpp  NAT_TEAM (1).odp  National-Team-FEUP.vpp  NationalTeam.docx  Provider.cpp  README.md
NTeam/: CMakeLists.txt  NecessaryFunctions_NameSpaces.cpp  NecessaryFunctions_NameSpaces.h  main.cpp  menuPresent.cpp  menuPresent.h
NTeam/Classes/: Call.cpp  Call.h  Coach.cpp  Coach.h  Date.cpp  Date.h  Equipment.cpp  Equipment.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  GameStats.cpp  GameStats.h  IndividualStatistics.cpp  IndividualStatistics.h  InfCall.cpp  InfCall.h  NationalTeam.cpp  NationalTeam.h  OtherWorker.cpp  OtherWorker.h  Provider.cpp  Provider.h  SoccerPlayer.cpp  SoccerPlayer.h  Staff.cpp  Staff.h  Stats.cpp  Stats.h  TechnicalTeam.cpp  TechnicalTeam.h  bst.h
NTeam/Files/: Calls.txt  Coaches.txt  Equipment.txt  GameStatistics.txt  Games.txt  IndividualStatistics.txt  InfCalls.txt  Info dos files.txt  OtherWorkers.txt  Providers.txt  SoccerPlayers.txt  StaffHashTable.txt  TechnicalTeam.txt
NTeam/docs/: Doxyfile
NTeam/docs/output/html/: _call_8h_source.html  _coach_8h_source.html  _date_8h_source.html  _equipment_8h_source.html  _exceptions_8h_source.html  _game_8h_source.html  _game_stats_8h_source.html  _individual_statistics_8h_source.html  _inf_call_8h_source.html  _national_team_8h_source.html  _necessary_functions___name_spaces_8h_source.html  _other_worker_8h_source.html  _provider_8h_source.html  _soccer_player_8h_source.html  _staff_8h_source.html  _technical_team_8h_source.html  annotated.html  bst_8h_source.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_binary_node-members.html  class_binary_node.html  class_call-members.html  class_call.html  class_coach-members.html  class_coach.html  class_date-members.html  class_date.html  class_date_1_1_wrong_date_format-members.html  class_date_1_1_wrong_date_format.html  class_equipment-members.html  class_equipment.html  (+83 more)
NTeam/docs/output/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+35 more)
(+2 files in other folders)
